syntax = "proto3";

package yunseong.grpc;

option java_multiple_files = true;
option java_package = "yunseong.grpc";

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  string name = 1;
  string email = 2;
}